Remove useless code (#13)
